<resources>
    <string name="app_name">Nasa Mars Photos</string>
    <string name="rover_name_curiosity">Rover Name: Curiosity</string>
    <string name="search_by_date"> by Date</string>
    <string name="front_hazard_avoidance_camera">Front Hazard Avoidance Camera</string>
    <string name="rear_hazard_avoidance_camera">Rear Hazard Avoidance Camera</string>
    <string name="mast_camera">Mast Camera</string>
    <string name="chemistry_and_camera_complex">Chemistry and Camera Complex</string>
    <string name="mars_hand_lens_image">Mars Hand Lens Imager</string>
    <string name="mars_descent_imager">Mars Descent Imager</string>
    <string name="navigation_camera">Navigation Camera</string>
    <string name="fhaz">FHAZ</string>
    <string name="rhaz">RHAZ</string>
    <string name="mast">MAST</string>
    <string name="chemcam">CHEMCAM</string>
    <string name="mahli">MAHLI</string>
    <string name="mardi">MARDI</string>
    <string name="navcam">NAVCAM</string>
    <string name="camera_code">cameraCode</string>
    <string name="all">all</string>
    <string name="all_cameras">All Cameras</string>
    <string name="about_developer">About Developer</string>
    <string name="please_filter_a_camera">Please filter a Camera!!</string>
    <string name="sort_list">sortList</string>
    <string name="about_app_description">I created this application because I love space exploration.\nThis application is about the Curiosity Rover on Mars which is currently active.\nUsing this application you can see the images clicked on different days by different cameras on the rover.\nThere is a settings page through which you can select multiple configurations using which you can sort or filter the data.</string>
    <string name="linkedin"><a href="https://www.linkedin.com/in/shwetank-bhardwaj/">Tap here to open LinkedIn</a></string>
    <string name="github"><a href="https://github.com/Shwetank-Bhardwaj">Tap here to open GitHub</a></string>
    <string name="application_developed_by">Application Developed By</string>
</resources>